# jiaz

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENCE  README.md  Untitled.ipynb  dev-requirements.txt  fix_unused_imports.py  fix_whitespace.py  jiaz.spec  makefile  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature.md  other.md
.github/workflows/: ISSUE_TEMPLATE.md  build-and-release.yaml  build.yaml  ci.yaml  cleanup-artifacts.yaml  cleanup.yaml  formatBytes.js  instant-clean.yaml  instant_clean.yaml  main-artifact-cleanup.yaml  pull_request_template.md
jiaz/: __main__.py  cli.py  test_cli.py  test_main.py
jiaz/commands/: config.py  conftest.py
jiaz/commands/analyze/: README.md  __init__.py  issue.py  sprint.py  test_issue.py  test_sprint.py
jiaz/commands/config/: README.md  __init__.py  get.py  init.py  list.py  set.py  test_get.py  test_init.py  test_list.py  test_set.py  test_use.py  use.py
jiaz/core/: ai_utils.py  config_utils.py  custom_fields.py  display.py  formatter.py  issue_utils.py  jira_comms.py  sprint_utils.py  test_ai_utils.py  test_config_utils.py  test_custom_fields.py  test_display.py  test_formatter.py  test_issue_utils.py  test_jira_comms.py  test_output.py  test_sprint_utils.py  test_validate.py  validate.py
jiaz/core/prompts/: compare.py  description.py  issue_summary.py  jira_markup_render.py  test_compare.py  test_description.py  test_jira_markup_render.py
tests/: conftest.py
utils/config/: .flake8  .isort.cfg
(+5 files in other folders)
