[tool.poetry]
name = "jiaz"
version = "0.1.0"
description = "JIRA CLI assistant"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"

[tool.poetry.scripts]
jiaz = "jiaz.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"